[gd_scene load_steps=4 format=2]

[ext_resource path="res://dialogue/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/sqr_button_normal.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/sqr_button_pressed.png" type="Texture" id=3]

[node name="DialogueBox" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_top = 177.0
margin_right = 460.0
margin_bottom = 240.0

[node name="Columns" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -27.5
margin_right = 226.0
margin_bottom = 27.5

[node name="TextContainer" type="VBoxContainer" parent="Panel/Columns"]
margin_right = 434.0
margin_bottom = 55.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="Panel/Columns/TextContainer"]
margin_right = 434.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Name"

[node name="Text" type="Label" parent="Panel/Columns/TextContainer"]
margin_top = 18.0
margin_right = 434.0
margin_bottom = 55.0
size_flags_vertical = 3
text = "Text"
align = 1
valign = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="Panel/Columns"]
margin_left = 438.0
margin_right = 452.0
margin_bottom = 55.0
alignment = 1

[node name="ButtonNext" type="TextureButton" parent="Panel/Columns/ButtonsContainer"]
margin_top = 2.0
margin_right = 14.0
margin_bottom = 16.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="ButtonPrev" type="TextureButton" parent="Panel/Columns/ButtonsContainer"]
margin_top = 20.0
margin_right = 14.0
margin_bottom = 34.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[node name="ButtonFinish" type="TextureButton" parent="Panel/Columns/ButtonsContainer"]
margin_top = 38.0
margin_right = 14.0
margin_bottom = 52.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )

[connection signal="button_up" from="Panel/Columns/ButtonsContainer/ButtonNext" to="." method="_on_ButtonNext_button_up"]
[connection signal="button_up" from="Panel/Columns/ButtonsContainer/ButtonPrev" to="." method="_on_ButtonPrev_button_up"]
[connection signal="button_up" from="Panel/Columns/ButtonsContainer/ButtonFinish" to="." method="_on_ButtonFinish_button_up"]
